add keyword api provider of weather,geocode to package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "keywords": [
     "weather",
     "weather-app",
-    "webapp"
+    "webapp",
+    "weatherstack",
+    "mapbox"
   ],
   "author": "peemtanapat",
   "license": "ISC",
