implement env file for keep api access_token

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node src/app.js",
-        "dev": "nodemon src/app.js -e js/hbs",
+        "start": "env-cmd -f config/.env node src/app.js",
+        "dev": "env-cmd -f config/.env nodemon src/app.js -e js/hbs",
         "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
     },
     "prettier": {
@@ -29,6 +29,7 @@
         "request": "^2.88.2"
     },
     "devDependencies": {
+        "env-cmd": "^10.1.0",
         "nodemon": "^2.0.6",
         "prettier": "^2.2.1"
     }
