--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "env-cmd -f config/.env node src/app.js",
+        "start": "node src/app.js",
         "dev": "env-cmd -f config/.env nodemon src/app.js -e js,hbs,json",
         "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
     },
